--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>NSU</groupId>
-    <artifactId>maven</artifactId>
+    <artifactId>interface</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -39,7 +39,7 @@
                     </descriptorRefs>
                     <archive>
                         <manifest>
-                            <mainClass>Maven.Main</mainClass>
+                            <mainClass>Task1.Main</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
